--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<script src="js/javascript.js" type="text/javascript"></script>
+	 <script src="js/javascript.js" type="text/javascript" src="js/javascript.js"></script>
+		<script type="text/javascript">
+</script>
 		<style> h1	{
 			font-size: 40px;
 		}
@@ -17,15 +19,22 @@
 	<body>
 		<div class="grid-container">
 			<div class="header">
-					<div class="TEST">
+					<div class="Titel">
 						<h1>Evigt Fiske</h1>
 					</div>
 				</div>
+
+
 		<div class="row">
-		  <div class="column1"><a>Kontakta Oss</a></div>
-		  <div class="column2"><a>Om Oss</a></div>
-		  <div class="column3"><a>Om fisken</a></div>
+		  <div class="column1"><a href="index.html">Hem</a></div>
+		  <div class="column2"><a href="Om.html">Om Oss</a></div>
+		  <div class="column3"><a href="Kontakta.html">Kontakta Oss</a></div>
 		</div>
+		<br>
+		 <br>
+			<br>
+			 <br>
+		<audio controls autoplay> <source src="Ginger Ass Mama - Mustacho [Official Audio] copy.mp3" type="audio/mpeg"> </audio>
 		<table>
 			<tr>
 				<td>
@@ -66,7 +75,7 @@
 									<p> jmf pris 175kr/kg
 							</ul>
 					</div>
-						<button class="Pröjsa" onclick="Allt()" id="buy-button1" type="button" name="button">
+						<button class="Pröjsa" onclick="Allt()" id="buy-button2" type="button" name="button">
 						<h1>KÖP 79:-</h1>
 					</button>
 				</div>
@@ -88,7 +97,7 @@
 							</li>
 						</ul>
 				</div>
-				<button onclick="Allt()"class="Pröjsa">
+				<button onclick="A-tag"class="Pröjsa" id="buy-button3" type="button" name="button">
 					<h1>KÖP 63:-</h1>
 				</button>
 			</div>
@@ -133,7 +142,7 @@
 									<p> jmf pris 175kr/kg
 							</ul>
 					</div>
-						<button class="Pröjsa" onclick="Allt()" id="buy-button1" type="button" name="button">
+						<button class="Pröjsa" onclick="Allt()" id="buy-button2" type="button" name="button">
 						<h1>KÖP 79:-</h1>
 					</button>
 					</div>
@@ -155,7 +164,7 @@
 							</li>
 						</ul>
 				</div>
-				<button onclick="Allt()"class="Pröjsa">
+				<button onclick="A-tag"class="Pröjsa" id="buy-button3" type="button" name="button">
 					<h1>KÖP 63:-</h1>
 				</button>
 			</div>
@@ -200,7 +209,7 @@
 									<p> jmf pris 175kr/kg
 							</ul>
 					</div>
-						<button class="Pröjsa" onclick="Allt()" id="buy-button1" type="button" name="button">
+						<button class="Pröjsa" onclick="A-tag" id="buy-button2" type="button" name="button">
 						<h1>KÖP 79:-</h1>
 					</button>
 			</div>
@@ -222,7 +231,7 @@
 							</li>
 						</ul>
 				</div>
-				<button onclick="Allt()"class="Pröjsa">
+				<button onclick="A-tag"class="Pröjsa" id="buy-button3" type="button" name="button">
 					<h1>KÖP 63:-</h1>
 				</button>
 			</div>
@@ -267,7 +276,7 @@
 									<p> jmf pris 175kr/kg
 							</ul>
 					</div>
-						<button class="Pröjsa" onclick="Allt()" id="buy-button1" type="button" name="button">
+						<button class="Pröjsa" onclick="Allt()" id="buy-button2" type="button" name="button">
 						<h1>KÖP 79:-</h1>
 					</button>
 				</div>
@@ -288,7 +297,7 @@
 							</li>
 						</ul>
 				</div>
-				<button onclick="Allt()"class="Pröjsa">
+				<button onclick="Atag(this)"class="Pröjsa" id="buy-button3" type="button" name="button">
 					<h1>KÖP 63:-</h1>
 				</button>
 			</div>
@@ -298,7 +307,6 @@
 	</table>
 	</div>
 
-	<!--<audio controls autoplay> <source src="UNO.mp3" type="audio/mpeg"> </audio>-->
 
 	<!--<a href="#botten"><p style="color: purple; text-align: center;">Gå till BOTTEN</p></a>-->
 
