--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 			h3 {
 				font-size: 36px;
 			}
+			audio {
+				position: relative;
+				left: 40%;
+
+
+			}
 		</style>
 		<link rel="stylesheet" type="text/css" href="css/Martin.css">
 		<link rel="stylesheet" type="text/css" href="css/grid.css">
@@ -17,24 +23,32 @@
 		<meta charset="utf-8">
 	</head>
 	<body>
+
 		<div class="grid-container">
 			<div class="header">
-					<div class="Titel">
+					<div id="Titel">
 						<h1>Evigt Fiske</h1>
 					</div>
 				</div>
 
 
 		<div class="row">
-		  <div class="column1"><a href="index.html">Hem</a></div>
-		  <div class="column2"><a href="Om.html">Om Oss</a></div>
-		  <div class="column3"><a href="Kontakta.html">Kontakta Oss</a></div>
+			<div class="column1"><a href="index.html"><br>Hem</a></div>
+			<div class="column2"><a href="Om.html"><br>Om Oss</a></div>
+			<div class="column3"><a href="Kontakta.html"><br>Kontakta Oss</a></div>
 		</div>
-		<br>
-		 <br>
-			<br>
-			 <br>
-		<audio controls autoplay> <source src="Ginger Ass Mama - Mustacho [Official Audio] copy.mp3" type="audio/mpeg"> </audio>
+		<br> <br> <br>
+		<a href="#botten"><p id="top" style="
+			text-align: center;
+			color: darkblue;
+			background-color: lightblue;
+			border-color: darkblue;
+			border-width: 10px;
+			border-radius: 25px;
+			padding: 20px;
+			border-style: outset;">Gå till BOTTEN</p></a>
+
+	<!--	<audio controls autoplay> <source src="Ginger Ass Mama - Mustacho [Official Audio].mp3" type="audio/mpeg"> </audio> -->
 		<table>
 			<tr>
 				<td>
@@ -307,8 +321,20 @@
 	</table>
 	</div>
 
+		<h4 id="botten"></h4>
+		<a href="#Titel"><p id="botten"style="
+			color: purple;
+			text-align: center;
+			color: darkblue;
+			background-color: lightblue;
+			border-color: darkblue;
+			border-width: 10px;
+			border-radius: 25px;
+			padding: 20px;
+			border-style: outset;"> Gå till TOPPEN </p></a>
 
-	<!--<a href="#botten"><p style="color: purple; text-align: center;">Gå till BOTTEN</p></a>-->
+
+
 
 		<!--<input list="klasser">
 		<datalist id="klasser">
