--- a/Kontakta.html
+++ b/Kontakta.html
@@ -15,17 +15,45 @@
 		<meta charset="utf-8">
 	</head>
 	<body>
+
 		<div class="grid-container">
 			<div class="header">
-					<div class="Titel">
+					<div id="Titel">
 						<h1>Evigt Fiske</h1>
 					</div>
 				</div>
 				<div class="row">
-				  <div class="column1"><a href="index.html">Hem</a></div>
-				  <div class="column2"><a href="Om.html">Om Oss</a></div>
-				  <div class="column3"><a href="Kontakta.html">Kontakta Oss</a></div>
+				  <div class="column1"><a href="index.html"><br>Hem</a></div>
+				  <div class="column2"><a href="Om.html"><br>Om Oss</a></div>
+				  <div class="column3"><a href="Kontakta.html"><br>Kontakta Oss</a></div>
 				</div>
-				
+<br> <br> <br>
+				<div class="container">
+  <form action="action_page.php">
+
+    <label for="fname">Förnamn</label>
+    <input type="text" id="fname" name="firstname" placeholder="Ditt Förnamn..">
+
+    <label for="lname">Efternamn</label>
+    <input type="text" id="lname" name="lastname" placeholder="Ditt Efternman...">
+
+    <label for="country">Område</label>
+    <select id="country" name="country">
+      <option value="Stockholm">Stockholm</option>
+      <option value="Göteborg">Göteborg</option>
+      <option value="Köping">Köping</option>
+			<option value="Mjölby">Mjölby</option>
+		  <option value="Borås">Borås</option>
+      <option value="Linköping">Linköping</option>
+    </select>
+
+    <label for="subject">Ämne</label>
+    <textarea id="subject" name="subject" placeholder="Skriv Något.." style="height:200px"></textarea>
+
+    <input type="submit" value="Submit">
+
+  </form>
+</div>
+
 </body>
 </html>
