--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
 							</li>
 						</ul>
 				</div>
-				<button class="Pröjsa" onclick="Allt()" id="buy-button1" type="button" name="button">
+			<a href="omfisk.html">	<button href="omfisk.html" class="Pröjsa" onclick="Allt()" id="buy-button1" type="button" name="button">
 				<h1>KÖP 94:-</h1>
-			</button>
+			</button></a>
 			</div>
 		</td>
 			<td>
@@ -89,9 +89,10 @@
 									<p> jmf pris 175kr/kg
 							</ul>
 					</div>
+						<a href="omfisk.html">
 						<button class="Pröjsa" onclick="Allt()" id="buy-button2" type="button" name="button">
 						<h1>KÖP 79:-</h1>
-					</button>
+					</button></a>
 				</div>
 			</td>
 				<td>
@@ -111,9 +112,10 @@
 							</li>
 						</ul>
 				</div>
+					<a href="omfisk.html">
 				<button onclick="A-tag"class="Pröjsa" id="buy-button3" type="button" name="button">
 					<h1>KÖP 63:-</h1>
-				</button>
+				</button></a>
 			</div>
 		</td>
 		</tr>
@@ -135,9 +137,10 @@
 							</li>
 						</ul>
 				</div>
+					<a href="omfisk.html">
 				<button class="Pröjsa" onclick="Allt()" id="buy-button1" type="button" name="button">
 				<h1>KÖP 94:-</h1>
-			</button>
+			</button></a>
 			</div>
 		</td>
 			<td>
@@ -156,9 +159,10 @@
 									<p> jmf pris 175kr/kg
 							</ul>
 					</div>
+						<a href="omfisk.html">
 						<button class="Pröjsa" onclick="Allt()" id="buy-button2" type="button" name="button">
 						<h1>KÖP 79:-</h1>
-					</button>
+					</button></a>
 					</div>
 				</td>
 			<td>
@@ -178,9 +182,10 @@
 							</li>
 						</ul>
 				</div>
+					<a href="omfisk.html">
 				<button onclick="A-tag"class="Pröjsa" id="buy-button3" type="button" name="button">
 					<h1>KÖP 63:-</h1>
-				</button>
+				</button></a>
 			</div>
 		</td>
 		</tr>
@@ -202,9 +207,10 @@
 							</li>
 						</ul>
 				</div>
+					<a href="omfisk.html">
 				<button class="Pröjsa" onclick="Allt()" id="buy-button1" type="button" name="button">
 				<h1>KÖP 94:-</h1>
-			</button>
+			</button></a>
 			</div>
 		</td>
 			<td>
@@ -223,9 +229,10 @@
 									<p> jmf pris 175kr/kg
 							</ul>
 					</div>
+						<a href="omfisk.html">
 						<button class="Pröjsa" onclick="A-tag" id="buy-button2" type="button" name="button">
 						<h1>KÖP 79:-</h1>
-					</button>
+					</button></a>
 			</div>
 		</td>
 			<td>
@@ -245,9 +252,10 @@
 							</li>
 						</ul>
 				</div>
+					<a href="omfisk.html">
 				<button onclick="A-tag"class="Pröjsa" id="buy-button3" type="button" name="button">
 					<h1>KÖP 63:-</h1>
-				</button>
+				</button></a>
 			</div>
 		</td>
 		</tr>
@@ -269,9 +277,10 @@
 							</li>
 						</ul>
 				</div>
+					<a href="omfisk.html">
 					<button class="Pröjsa" onclick="Allt()" id="buy-button1" type="button" name="button">
 					<h1>KÖP 94:-</h1>
-				</button>
+				</button></a>
 			</div>
 		</td>
 			<td>
@@ -290,9 +299,10 @@
 									<p> jmf pris 175kr/kg
 							</ul>
 					</div>
+						<a href="omfisk.html">
 						<button class="Pröjsa" onclick="Allt()" id="buy-button2" type="button" name="button">
 						<h1>KÖP 79:-</h1>
-					</button>
+					</button></a>
 				</div>
 			</td>
 			<td><div class="right">
@@ -311,9 +321,10 @@
 							</li>
 						</ul>
 				</div>
+					<a href="omfisk.html">
 				<button onclick="Atag(this)"class="Pröjsa" id="buy-button3" type="button" name="button">
 					<h1>KÖP 63:-</h1>
-				</button>
+				</button></a>
 			</div>
 		</td>
 		</tr>
