--- a/omfisk.html
+++ b/omfisk.html
@@ -17,14 +17,17 @@
 	<body>
 		<div class="grid-container">
 			<div class="header">
-					<div class="Titel">
+					<div id="Titel">
 						<h1>Evigt Fiske</h1>
 					</div>
 				</div>
 				<div class="row">
-				  <div class="column1"><a href="index.html">Hem</a></div>
-				  <div class="column2"><a href="Om.html">Om Oss</a></div>
-				  <div class="column3"><a href="Kontakta.html">Kontakta Oss</a></div>
+				  <div class="column1"><a href="index.html"><br>Hem</a></div>
+				  <div class="column2"><a href="Om.html"><br>Om Oss</a></div>
+				  <div class="column3"><a href="Kontakta.html"><br>Kontakta Oss</a></div>
 				</div>
+
+				<img class="Salmone" src="salmone.jpeg">
+				<h2 class="Tack">Tack för ditt Köp!</h2>
 </body>
 </html>
