--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 		<div class="row">
 			<div class="column1"><a href="index.html"><br>Hem</a></div>
-			<div class="column2"><a href="Om.html"><br>Om Oss</a></div>
+			<div class="column2"><a href="Om copy.html"><br>Om Oss</a></div>
 			<div class="column3"><a href="Kontakta.html"><br>Kontakta Oss</a></div>
 		</div>
 		<br> <br> <br>
