--- a/Kontakta.html
+++ b/Kontakta.html
@@ -47,13 +47,14 @@
       <option value="Linköping">Linköping</option>
     </select>
 
-    <label for="subject">Ämne</label>
     <textarea id="subject" name="subject" placeholder="Skriv Något.." style="height:200px"></textarea>
 
-    <input type="submit" value="Submit">
+    <a href="Kontakta.html"> <input type="submit" value="Submit"> </a>
 
   </form>
 </div>
+
+<img src=""
 
 </body>
 </html>
