--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 		<div class="row">
 			<div class="column1"><a href="index.html"><br>Hem</a></div>
-			<div class="column2"><a href="Om copy.html"><br>Om Oss</a></div>
+			<div class="column2"><a href="Om.html"><br>Om Oss</a></div>
 			<div class="column3"><a href="Kontakta.html"><br>Kontakta Oss</a></div>
 		</div>
 		<br> <br> <br>
@@ -46,7 +46,7 @@
 			border-width: 10px;
 			border-radius: 25px;
 			padding: 20px;
-			border-style: outset;">Gå till BOTTEN</p></a>
+			border-style: outset;">Gå till havets BOTTEN</p></a>
 
 	<!--	<audio controls autoplay> <source src="Ginger Ass Mama - Mustacho [Official Audio].mp3" type="audio/mpeg"> </audio> -->
 		<table>
