--- a/om copy.html
+++ b/om copy.html
@@ -28,6 +28,41 @@
 				<br> <br>
 				<br> <br>
 					<div class="sec"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sed blandit libero volutpat sed cras ornare arcu. Facilisis leo vel fringilla est ullamcorper eget. Massa placerat duis ultricies lacus sed turpis tincidunt id aliquet. Placerat duis ultricies lacus sed turpis tincidunt id aliquet risus. Bibendum at varius vel pharetra vel turpis. Potenti nullam ac tortor vitae purus faucibus. Odio morbi quis commodo odio aenean sed adipiscing diam. Egestas integer eget aliquet nibh praesent tristique magna. Dictum non consectetur a erat. Blandit libero volutpat sed cras.
+
+						<!-- Slideshow container -->
+						<div class="slideshow-container">
+
+							<!-- Full-width images with number and caption text -->
+							<div class="mySlides fade">
+								<div class="numbertext">1 / 3</div>
+								<img src="Lax.png" style="width:100%;">
+								<div class="text">Caption Text</div>
+							</div>
+
+							<div class="mySlides fade">
+								<div class="numbertext">2 / 3</div>
+								<img src="Torsk.png" style="width:100%;">
+								<div class="text">Caption Two</div>
+							</div>
+
+							<div class="mySlides fade">
+								<div class="numbertext">3 / 3</div>
+								<img src="evigt_fiske/Tonfisk.png" style="width:100%;">
+								<div class="text">Caption Three</div>
+							</div>
+
+							<!-- Next and previous buttons -->
+							<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+							<a class="next" onclick="plusSlides(1)">&#10095;</a>
+						</div>
+						<br>
+
+						<!-- The dots/circles -->
+						<div style="text-align:center">
+							<span class="dot" onclick="currentSlide(1)"></span>
+							<span class="dot" onclick="currentSlide(2)"></span>
+							<span class="dot" onclick="currentSlide(3)"></span>
+						</div>
 <div>
 </body>
 </html>
