--- a/om.html
+++ b/om.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<script src="js/javascript.js" type="text/javascript"></script>
+
 		<style> h1	{
 			font-size: 40px;
 		}
@@ -28,6 +28,34 @@
 				<br> <br>
 				<br> <br>
 					<div class="sec"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sed blandit libero volutpat sed cras ornare arcu. Facilisis leo vel fringilla est ullamcorper eget. Massa placerat duis ultricies lacus sed turpis tincidunt id aliquet. Placerat duis ultricies lacus sed turpis tincidunt id aliquet risus. Bibendum at varius vel pharetra vel turpis. Potenti nullam ac tortor vitae purus faucibus. Odio morbi quis commodo odio aenean sed adipiscing diam. Egestas integer eget aliquet nibh praesent tristique magna. Dictum non consectetur a erat. Blandit libero volutpat sed cras.
-<div>
+
+						<!-- Slideshow container -->
+						<div class="slideshow-container">
+
+							<!-- Full-width images with number and caption text -->
+							<div class="mySlides fade">
+								<div class="numbertext">1 / 3</div>
+								<img src="Lax.png" style="width:95%;">
+								<div class="text">Laxfilé Fryst</div>
+							</div>
+
+							<div class="mySlides fade">
+								<div class="numbertext">2 / 3</div>
+								<img src="Torsk.png" style="width:100%;">
+								<div class="text">Torskryggfilé Fryst MSC-märkt</div>
+							</div>
+
+							<div class="mySlides fade">
+								<div class="numbertext">3 / 3</div>
+								<img src="Tonfisk.png" style="width:100%;">
+								<div class="text">Tonfisk 2*125g</div>
+							</div>
+
+							<!-- Next and previous buttons -->
+						</div>
+						<br>
+
+
+<script src="js/javascript.js" type="text/javascript"></script>
 </body>
 </html>
