--- a/Kontakta.html
+++ b/Kontakta.html
@@ -24,7 +24,7 @@
 				</div>
 				<div class="row">
 				  <div class="column1"><a href="index.html"><br>Hem</a></div>
-				  <div class="column2"><a href="Om.html"><br>Om Oss</a></div>
+				  <div class="column2"><a href="om.html"><br>Om Oss</a></div>
 				  <div class="column3"><a href="Kontakta.html"><br>Kontakta Oss</a></div>
 				</div>
 <br> <br> <br>
