--- a/om.html
+++ b/om.html
@@ -23,7 +23,7 @@
 				<div class="row">
 					<div class="column1"><a href="index.html"><br>Hem</a></div>
 				  <div class="column2"><a href="om.html"><br>Om Oss</a></div>
-				  <div class="column3"><a href="kontakta.html"><br>Kontakta Oss</a></div>
+				  <div class="column3"><a href="Kontakta.html"><br>Kontakta Oss</a></div>
 				</div>
 				<br> <br>
 				<br> <br>
