--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 								<p> Norge </p>
 							</li>
 							<li>
-								<p> jmf pris 188/kg </p>
+								<p> jmf pris 188kr/kg </p>
 							</li>
 						</ul>
 				</div>
@@ -330,7 +330,7 @@
 		</tr>
 		</div>
 	</table>
-	</div>
+
 
 		<h4 id="botten"></h4>
 		<a href="#Titel"><p id="botten"style="
@@ -344,34 +344,5 @@
 			padding: 20px;
 			border-style: outset;"> Gå till TOPPEN </p></a>
 
-
-
-
-		<!--<input list="klasser">
-		<datalist id="klasser">
-			<option value="Skolmaten">Bently Bistora ma man</option>
-			<option value="Schedule	">Endast T19</option>
-		</datalist> -->
-
-<!--		<br> <br>
-		<img id="SKOLAN" src="bilden.png" alt="TEG">
-		<h3>Vi firar 20 år på TEG!</h3>
-		<iframe width="950" height="400" src="https://www.youtube.com/embed/7z8U7BbYeB8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-			<a href="https://www.tabyenskilda.se" target="_blank"><img id="SPLASH" src="https://i.vimeocdn.com/portrait/4634284_640x640"></a>
-			<ul>
-			<li>
-				<a href="https://www.tabyenskilda.se/teknikprogrammet/" target="_blank"><p>Om Teknikprogrammet</p></a>
-			</li>
-			<li>
-				<a href="QUIZ.html">QUIZ</a>
-		 	</li>
-		</ul>-->
-	<!--	<h4 id="botten"></h4>
-		<a href="#top"> <p style="color: purple; text-align: center;"> Gå till TOPPEN </p></a>
-
-<button class="buy-button" onclick="Allt()" id="buy-button1" type="button" name="button"></button>
-	<button class="buy-button" id="buy-button2" type="button" name="button"></button>
-	<button class="buy-button" id="buy-button3" type="button" name="button"></button> -->
 	</body>
 </html>
