--- a/HTML-EF/index.html
+++ b/HTML-EF/index.html
@@ -9,16 +9,10 @@
 		}
 			h3 {
 				font-size: 36px;
-			}
-			audio {
-				position: relative;
-				left: 40%;
-
-
-			}
+}
 		</style>
-		<link rel="stylesheet" type="text/css" href="css/Martin.css">
-		<link rel="stylesheet" type="text/css" href="css/grid.css">
+		<link rel="stylesheet" type="text/css" href="../CSS-EF/Martin.css">
+		<link rel="stylesheet" type="text/css" href="../CSS-EF/grid.css">
 		<title>Evigt Fiske</title>
 		<meta charset="utf-8">
 	</head>
