--- a/HTML-EF/index.html
+++ b/HTML-EF/index.html
@@ -48,7 +48,7 @@
 				<td>
   		<div class="left">
 				<h4 class="in-header">Laxfilé Fryst</h4>
-				<img class="in-pic"src="Lax.png">
+				<img class="in-pic"src="../BILDER-EF/Lax.png">
 					<div class="FiskText">
 						<ul>
 							<li>
@@ -70,7 +70,7 @@
 			<td>
   		<div class="middle">
 				<h4 class="in-header">Torskryggfilé Fryst MSC-märkt</h4>
-					<img class="in-pic"src="Torsk.png">
+					<img class="in-pic"src="../BILDER-EF/Torsk.png">
 						<div class="FiskText">
 							<ul>
 								<li>
@@ -92,7 +92,7 @@
 				<td>
   		<div class="right">
 				<h4 class="in-header">Tonfisk 2*125g</h4>
-				<img class="in-pic"src="Tonfisk.png">
+				<img class="in-pic"src="../BILDER-EF/Tonfisk.png">
 					<div class="FiskText">
 						<ul>
 							<li>
@@ -117,7 +117,7 @@
 			<td>
 			<div class="left">
 				<h4 class="in-header">Laxfilé Fryst</h4>
-				<img class="in-pic"src="Lax.png">
+				<img class="in-pic"src="../BILDER-EF/Lax.png">
 					<div class="FiskText">
 						<ul>
 							<li>
@@ -140,7 +140,7 @@
 			<td>
 			<div class="middle">
 				<h4 class="in-header">Torskryggfilé Fryst MSC-märkt</h4>
-					<img class="in-pic"src="Torsk.png">
+					<img class="in-pic"src="../BILDER-EF/Torsk.png">
 						<div class="FiskText">
 							<ul>
 								<li>
@@ -162,7 +162,7 @@
 			<td>
 			<div class="right">
 				<h4 class="in-header">Tonfisk 2*125g</h4>
-				<img class="in-pic"src="Tonfisk.png">
+				<img class="in-pic"src="../BILDER-EF/Tonfisk.png">
 					<div class="FiskText">
 						<ul>
 							<li>
@@ -187,7 +187,7 @@
 			<td>
 			<div class="left">
 				<h4 class="in-header">Laxfilé Fryst</h4>
-				<img class="in-pic"src="Lax.png">
+				<img class="in-pic"src="../BILDER-EF/Lax.png">
 					<div class="FiskText">
 						<ul>
 							<li>
@@ -210,7 +210,7 @@
 			<td>
 			<div class="middle">
 				<h4 class="in-header">Torskryggfilé Fryst MSC-märkt</h4>
-					<img class="in-pic"src="Torsk.png">
+					<img class="in-pic"src="../BILDER-EF/Torsk.png">
 						<div class="FiskText">
 							<ul>
 								<li>
@@ -232,7 +232,7 @@
 			<td>
 			<div class="right">
 				<h4 class="in-header">Tonfisk 2*125g</h4>
-				<img class="in-pic"src="Tonfisk.png">
+				<img class="in-pic"src="../BILDER-EF/Tonfisk.png">
 					<div class="FiskText">
 						<ul>
 							<li>
@@ -257,7 +257,7 @@
 			<td>
 			<div class="left">
 				<h4 class="in-header">Laxfilé Fryst</h4>
-				<img class="in-pic"src="Lax.png">
+				<img class="in-pic"src="../BILDER-EF/Lax.png">
 					<div class="FiskText">
 						<ul>
 							<li>
@@ -280,7 +280,7 @@
 			<td>
 			<div class="middle">
 				<h4 class="in-header">Torskryggfilé Fryst MSC-märkt</h4>
-					<img class="in-pic"src="Torsk.png">
+					<img class="in-pic"src="../BILDER-EF/Torsk.png">
 						<div class="FiskText">
 							<ul>
 								<li>
@@ -301,7 +301,7 @@
 			</td>
 			<td><div class="right">
 				<h4 class="in-header">Tonfisk 2*125g</h4>
-				<img class="in-pic"src="Tonfisk.png">
+				<img class="in-pic"src="../BILDER-EF/Tonfisk.png">
 					<div class="FiskText">
 						<ul>
 							<li>
