--- a/HTML-EF/Kontakta.html
+++ b/HTML-EF/Kontakta.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<script src="js/javascript.js" type="text/javascript"></script>
+
 		<style> h1	{
 			font-size: 40px;
 		}
@@ -9,8 +9,8 @@
 				font-size: 36px;
 			}
 		</style>
-		<link rel="stylesheet" type="text/css" href="css/Martin.css">
-		<link rel="stylesheet" type="text/css" href="css/grid.css">
+		<link rel="stylesheet" type="text/css" href="../CSS-EF/Martin.css">
+		<link rel="stylesheet" type="text/css" href="../CSS-EF/grid.css">
 		<title>Evigt Fiske</title>
 		<meta charset="utf-8">
 	</head>
