--- a/HTML-EF/om.html
+++ b/HTML-EF/om.html
@@ -9,8 +9,8 @@
 				font-size: 36px;
 			}
 		</style>
-		<link rel="stylesheet" type="text/css" href="css/Martin.css">
-		<link rel="stylesheet" type="text/css" href="css/grid.css">
+		<link rel="stylesheet" type="text/css" href="../CSS-EF/Martin.css">
+		<link rel="stylesheet" type="text/css" href="../CSS-EF/grid.css">
 		<title>Evigt Fiske</title>
 		<meta charset="utf-8">
 	</head>
@@ -35,19 +35,19 @@
 							<!-- Full-width images with number and caption text -->
 							<div class="mySlides fade">
 								<div class="numbertext">1 / 3</div>
-								<img src="Lax.png" style="width:95%;">
+								<img src="../BILDER-EF/Lax.png" style="width:95%;">
 								<div class="text">Laxfilé Fryst</div>
 							</div>
 
 							<div class="mySlides fade">
 								<div class="numbertext">2 / 3</div>
-								<img src="Torsk.png" style="width:100%;">
+								<img src="../BILDER-EF/Torsk.png" style="width:100%;">
 								<div class="text">Torskryggfilé Fryst MSC-märkt</div>
 							</div>
 
 							<div class="mySlides fade">
 								<div class="numbertext">3 / 3</div>
-								<img src="Tonfisk.png" style="width:100%;">
+								<img src="../BILDER-EF/Tonfisk.png" style="width:100%;">
 								<div class="text">Tonfisk 2*125g</div>
 							</div>
 
@@ -56,6 +56,6 @@
 						<br>
 
 
-<script src="js/javascript.js" type="text/javascript"></script>
+<script src="../JS-EF/javascript.js" type="text/javascript"></script>
 </body>
 </html>
