--- a/HTML-EF/index.html
+++ b/HTML-EF/index.html
@@ -1,21 +1,14 @@
 <!DOCTYPE html>
 <html>
 	<head>
-</script>
-		<style> h1	{
-			font-size: 40px;
-		}
-			h3 {
-				font-size: 36px;
-}
-		</style>
 		<link rel="stylesheet" type="text/css" href="../CSS-EF/Martin.css">
 		<link rel="stylesheet" type="text/css" href="../CSS-EF/grid.css">
 		<title>Evigt Fiske</title>
 		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 	<body>
-
+		<header> <!-- titel, öppnar grid container (HEADER)-->
 		<div class="grid-container">
 			<div class="header">
 					<div id="Titel">
@@ -23,24 +16,17 @@
 					</div>
 				</div>
 
-
+		</header>
+		<nav>
 		<div class="row">
 			<div class="column1"><a href="index.html"><br>Hem</a></div>
 			<div class="column2"><a href="om.html"><br>Om Oss</a></div>
 			<div class="column3"><a href="Kontakta.html"><br>Kontakta Oss</a></div>
 		</div>
 		<br> <br> <br>
-		<a href="#botten"><p id="top" style="
-			text-align: center;
-			color: darkblue;
-			background-color: lightblue;
-			border-color: darkblue;
-			border-width: 10px;
-			border-radius: 25px;
-			padding: 20px;
-			border-style: outset;">Gå till havets BOTTEN</p></a>
-
-	<!--	<audio controls autoplay> <source src="Ginger Ass Mama - Mustacho [Official Audio].mp3" type="audio/mpeg"> </audio> -->
+		<a href="#Port2"><p id="Port1">Gå till havets BOTTEN</p></a>
+	</nav>
+	<main>
 		<table>
 			<tr>
 				<td>
@@ -322,19 +308,11 @@
 		</tr>
 		</div>
 	</table>
+</main>
+<footer>
 
-
-		<h4 id="botten"></h4>
-		<a href="#Titel"><p id="botten"style="
-			color: purple;
-			text-align: center;
-			color: darkblue;
-			background-color: lightblue;
-			border-color: darkblue;
-			border-width: 10px;
-			border-radius: 25px;
-			padding: 20px;
-			border-style: outset;"> Gå till TOPPEN </p></a>
+		<a href="#Titel"><p id="Port2"> Gå till TOPPEN </p></a>
+	</footer>
 
 	</body>
 </html>
