--- a/HTML-EF/index.html
+++ b/HTML-EF/index.html
@@ -24,7 +24,7 @@
 			<div class="column3"><a href="Kontakta.html"><br>Kontakta Oss</a></div>
 		</div>
 		<br> <br> <br>
-		<a href="#Port2"><p id="Port1">Gå till havets BOTTEN</p></a>
+		<a href="#Port2"><p id="Port1" class=Port>Gå till havets BOTTEN</p></a>
 	</nav>
 	<main>
 		<table>
@@ -311,7 +311,7 @@
 </main>
 <footer>
 
-		<a href="#Titel"><p id="Port2"> Gå till TOPPEN </p></a>
+		<a href="#Titel"><p id="Port2" class="Port"> Gå till TOPPEN </p></a>
 	</footer>
 
 	</body>
