--- a/HTML-EF/index.html
+++ b/HTML-EF/index.html
@@ -17,7 +17,7 @@
 				</div>
 
 		</header>
-		<nav>
+		<nav><!-- Navigeringsystem till respektiva sidor samt runt main sidan -->
 		<div class="row">
 			<div class="column1"><a href="index.html"><br>Hem</a></div>
 			<div class="column2"><a href="om.html"><br>Om Oss</a></div>
@@ -26,7 +26,7 @@
 		<br> <br> <br>
 		<a href="#Port2"><p id="Port1" class=Port>Gå till havets BOTTEN</p></a>
 	</nav>
-	<main>
+	<main> <!-- Ger information till respektiva fiskkolumner även en <a-tag som navigerar till en Tack för ditt Köp! sida -->
 		<table>
 			<tr>
 				<td>
