--- a/HTML-EF/Kontakta.html
+++ b/HTML-EF/Kontakta.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 	<head>
-
 		<style> h1	{
 			font-size: 40px;
 		}
@@ -15,7 +14,7 @@
 		<meta charset="utf-8">
 	</head>
 	<body>
-
+<!--kopierad kod från main sidan (index.html)-->
 		<div class="grid-container">
 			<div class="header">
 					<div id="Titel">
@@ -28,16 +27,17 @@
 				  <div class="column3"><a href="Kontakta.html"><br>Kontakta Oss</a></div>
 				</div>
 <br> <br> <br>
+<!--funktion till kontakt sida struktur-->
 				<div class="container">
   <form action="action_page.php">
 
-    <label for="fname">Förnamn</label>
+    <label for="fname">Förnamn</label><!--Frnamn kolumn, sparande för local enhet-->
     <input type="text" id="fname" name="firstname" placeholder="Ditt Förnamn..">
 
-    <label for="lname">Efternamn</label>
+    <label for="lname">Efternamn</label><!--efternamn kolumn, sparande för local enhet-->
     <input type="text" id="lname" name="lastname" placeholder="Ditt Efternman...">
 
-    <label for="country">Område</label>
+    <label for="country">Område</label><!--Område kolumn, option funktion ger följande options:-->
     <select id="country" name="country">
       <option value="Stockholm">Stockholm</option>
       <option value="Göteborg">Göteborg</option>
@@ -46,15 +46,11 @@
 		  <option value="Borås">Borås</option>
       <option value="Linköping">Linköping</option>
     </select>
-
+<!--Skriv funktion-->
     <textarea id="subject" name="subject" placeholder="Skriv Något.." style="height:200px"></textarea>
-
-    <a href="Kontakta.html"> <input type="submit" value="Submit"> </a>
+    <a href="../HTML-EF/index.html"><p>Skicka-></p></a>
 
   </form>
 </div>
-
-<img src=""
-
 </body>
 </html>
