--- a/HTML-EF/index.html
+++ b/HTML-EF/index.html
@@ -30,31 +30,33 @@
 		<table>
 			<tr>
 				<td>
-  		<div class="left">
-				<h4 class="in-header">Laxfilé Fryst</h4>
-				<img class="in-pic"src="../BILDER-EF/Lax.png">
-					<div class="FiskText">
-						<ul>
-							<li>
-								<p> 500g </p>
-							</li>
-							<li>
-								<p> Norge </p>
-							</li>
-							<li>
-								<p> jmf pris 188kr/kg </p>
-							</li>
-						</ul>
-				</div>
-			<a href="omfisk.html">	<button href="omfisk.html" class="Pröjsa" onclick="Allt()" id="buy-button1" type="button" name="button">
-				<h1>KÖP 94:-</h1>
-			</button></a>
-			</div>
-		</td>
-			<td>
-  		<div class="middle">
-				<h4 class="in-header">Torskryggfilé Fryst MSC-märkt</h4>
-					<img class="in-pic"src="../BILDER-EF/Torsk.png">
+  				<div class="left"> <!--Information gällande filskar för varje kollumn i samma rad, Indelat i <tr>(table rows)-->
+							<h4 class="in-header">Laxfilé Fryst</h4>
+							<img class="in-pic"src="../BILDER-EF/Lax.png">
+							<div class="FiskText">
+								<ul>
+									<li>
+										<p> 500g </p>
+									</li>
+									<li>
+										<p> Norge </p>
+									</li>
+									<li>
+										<p> jmf pris 188kr/kg </p>
+									</li>
+								</ul>
+							</div>
+							<!--Köp funktion till fiskarna <a> till Tack för ditt köp Sidan!-->
+						<a href="omfisk.html">	<button href="omfisk.html" class="Pröjsa" onclick="Allt()" id="buy-button1" type="button" name="button">
+								<h1>KÖP 94:-</h1>
+							</button>
+						</a>
+					</div>
+				</td>
+				<td>
+  			<div class="middle">
+					<h4 class="in-header">Torskryggfilé Fryst MSC-märkt</h4>
+						<img class="in-pic"src="../BILDER-EF/Torsk.png">
 						<div class="FiskText">
 							<ul>
 								<li>
