--- a/HTML-EF/om.html
+++ b/HTML-EF/om.html
@@ -1,14 +1,6 @@
 <!DOCTYPE html>
 <html>
 	<head>
-
-		<style> h1	{
-			font-size: 40px;
-		}
-			h3 {
-				font-size: 36px;
-			}
-		</style>
 		<link rel="stylesheet" type="text/css" href="../CSS-EF/Martin.css">
 		<link rel="stylesheet" type="text/css" href="../CSS-EF/grid.css">
 		<title>Evigt Fiske</title>
@@ -56,6 +48,7 @@
 						<br>
 
 
-<script src="../JS-EF/javascript.js" type="text/javascript"></script>
+	<script src="../JS-EF/javascript.js" type="text/javascript">
+	</script>
 </body>
 </html>
